# SegaToolsTP

./: .gitignore  README.md  cross-mingw-32.txt  cross-mingw-64.txt  idz.ps1  meson.build  minime.ps1  resource.rc
.github/ISSUE_TEMPLATE/: bug_report.md
aimeio/: aimeio.c
hotdhook/: config.c  config.h  dllmain.c  hotdhook.def  io4.c  io4.h  meson.build
hotdio/: hotdio.c  hotdio.def  hotdio.h  meson.build
idzhook/: jvs.c  meson.build  resource.res
idzio/: config.c  config.h  dllmain.c  meson.build  tp.c  tp.h  xi.c
minime/: package-lock.json  start.bat
minime/src/: allnet.ts
sgtools/: ResourceHacker.ini
subprojects/minhook/: meson.build
swdchook/: config.c  config.h  dllmain.c  io4.c  io4.h  meson.build  swdchook.def  zinput.c
swdcio/: meson.build  swdcio.c  swdcio.def  swdcio.h
