shared_library(
    'swdchook',
    name_prefix : '',
    include_directories : inc,
    implicit_include_directories : false,
    vs_module_defs : 'swdchook.def',
    c_pch : '../precompiled.h',
    dependencies : [
        capnhook.get_variable('hook_dep'),
        capnhook.get_variable('hooklib_dep'),
        xinput_lib,
		minhook.get_variable('minhook_dep'),
    ],
    link_with : [
        aimeio_dll,
        amex_lib,
        board_lib,
        hooklib_lib,
        swdcio_dll,
        platform_lib,
        util_lib,
    ],
    sources : [
        'config.c',
        'config.h',
        'dllmain.c',
        'io4.c',
        'io4.h',
        'zinput.c',
        'zinput.h',
    ],
)